--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,7 +26,7 @@
           </li>
           <li class="nav-item dropdown" *ngIf="currentUser">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUserMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              {{ currentUser.email }} ({{ currentUser.tipo }})
+              {{ currentUser.email}}
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownUserMenu">
               <li><a class="dropdown-item" routerLink="/perfil">Meu Perfil</a></li>
