--- a/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
+++ b/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
@@ -52,9 +52,9 @@
             </thead>
             <tbody>
               <tr *ngFor="let s of filteredSolicitacoes" [ngClass]="{
-                'table-success': s.status === 'CONCLUIDA',
-                'table-danger': s.status === 'REJEITADA',
-                'table-warning': s.status === 'ABERTA'
+                'table-success': selectedStatus === 'CONCLUIDA',
+                'table-danger': selectedStatus === 'REJEITADA',
+                'table-warning': selectedStatus === 'ABERTA'
               }">
                 <td>{{ s.protocolo }}</td>
                 <td>{{ s.matriculaAluno }}</td>
