--- a/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
+++ b/src/app/components/secretaria/solicitacoes-secretaria-list/solicitacoes-secretaria-list.component.html
@@ -62,13 +62,13 @@
                 <td>{{ s.tipo }}</td>
                 <td>{{ s.campus }}</td>
                 <td>
-                  <button class="btn btn-info btn-sm" [routerLink]="['/solicitacoes/detalhes', s.id]">Ver Detalhes</button>
+                  <button class="btn btn-info me-2" [routerLink]="['/solicitacoes/detalhes', s.id]">Ver Detalhes</button>
                   <ng-container *ngIf="selectedStatus === 'ABERTA'">
-                    <button class="btn btn-success btn-sm me-2" (click)="aprovar(s.id)" title="Aprovar">
-                      <i class="bi bi-check-lg"></i>
+                    <button class="btn btn-success me-2" (click)="aprovar(s.id)" title="Aprovar">
+                      <i class="bi bi-check-lg"></i> Aprovar
                     </button>
-                    <button class="btn btn-danger btn-sm" (click)="rejeitar(s.id)" title="Rejeitar">
-                      <i class="bi bi-x-lg"></i>
+                    <button class="btn btn-danger" (click)="rejeitar(s.id)" title="Rejeitar">
+                      <i class="bi bi-x-lg"></i> Rejeitar
                     </button>
                   </ng-container>
                 </td>
