--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: navy;">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" routerLink="/">
+      <a class="navbar-brand d-flex align-items-center" [routerLink]="currentUser ? getDashboardPath() : '/'">
         <img src="logos/logo_unify_white.png" alt="Logo UniFy" class="me-2" style="height: 40px; width: auto;">
         <span>UniFy</span>
       </a>
