Tabelas com pagination

--- a/src/app/components/funcionario-secretaria/materia/funcionario-secretaria-materia-list/funcionario-secretaria-materia-list.component.html
+++ b/src/app/components/funcionario-secretaria/materia/funcionario-secretaria-materia-list/funcionario-secretaria-materia-list.component.html
@@ -6,7 +6,7 @@
       <div *ngIf="isLoading" class="alert alert-info">Carregando matérias...</div>
       <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
 
-      <table *ngIf="!isLoading && !errorMessage && materias.length > 0" class="table table-striped">
+      <table *ngIf="!isLoading && !errorMessage && paginatedMaterias.length > 0" class="table table-striped">
         <thead>
           <tr>
             <th>ID</th>
@@ -19,7 +19,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let materia of materias">
+          <tr *ngFor="let materia of paginatedMaterias">
             <td>{{ materia.id }}</td>
             <td>{{ materia.titulo }}</td>
             <td>{{ materia.codigo }}</td>
@@ -38,6 +38,15 @@
           </tr>
         </tbody>
       </table>
+
+      <!-- Pagination Controls -->
+      <app-pagination-controls 
+        *ngIf="!isLoading && !errorMessage && materias.length > 0"
+        [config]="paginationConfig"
+        (pageChange)="onPageChange($event)"
+        (pageSizeChange)="onPageSizeChange($event)"
+        (showAllToggle)="onShowAllToggle($event)">
+      </app-pagination-controls>
 
       <div *ngIf="!isLoading && !errorMessage && materias.length === 0" class="alert alert-secondary">
         Nenhuma matéria encontrada.
